force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Ruleset within a step is Active. Setting Wizard Design as Active automatically activates the included rulesets.</description>
    <inlineHelpText>Signifies that the Ruleset within a step is Active. Setting Wizard Design as Active automatically activates the included rulesets.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>