force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__AdvancedExpression__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AdvancedExpression__c</fullName>
    <description>Advanced expression that allows combination of AND and OR operators on rules.</description>
    <inlineHelpText>Advanced expression that allows combination of AND and OR operators on rules.</inlineHelpText>
    <label>Advanced Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>