force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__ContextObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContextObject__c</fullName>
    <description>Name of the object when the rule is of type &apos;Determine Focus Object&apos; or &apos;Determine Record Type&apos;</description>
    <inlineHelpText>Name of the object when the rule is of type &apos;Determine Focus Object&apos; or &apos;Determine Record Type&apos;</inlineHelpText>
    <label>Context Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>