force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__RecordType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RecordType__c</fullName>
    <description>Record type that corresponds to the record types for the object</description>
    <inlineHelpText>Record type that corresponds to the record types for the object</inlineHelpText>
    <label>Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>