force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__ResultantValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ResultantValue__c</fullName>
    <description>The value that is determined by the condition being met.</description>
    <inlineHelpText>The value that is determined by the condition being met.</inlineHelpText>
    <label>Resultant Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>