force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__RuleExpressionRuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RuleExpressionRuleType__c</fullName>
    <description>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</description>
    <inlineHelpText>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</inlineHelpText>
    <label>Rule Expression Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Go To Input</fullName>
            </value>
            <value>
                <fullName>Go To Step</fullName>
            </value>
            <value>
                <fullName>Determine Focus Object</fullName>
            </value>
            <value>
                <fullName>Determine Record Type</fullName>
            </value>
            <value>
                <fullName>Go To URL</fullName>
            </value>
            <value>
                <fullName>Go To Submit</fullName>
            </value>
            <value>
                <fullName>Next Step</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>