force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Sequence__c</fullName>
    <description>Sequence of the ruleset within the step it belongs to.</description>
    <inlineHelpText>Sequence of the ruleset within the step it belongs to.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>