force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__SubRecordtype__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SubRecordtype__c</fullName>
    <description>The subtype of object record this ruleset applies to</description>
    <inlineHelpText>The subtype of object record this ruleset applies to</inlineHelpText>
    <label>SubRecordtype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>