force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__ToWizardId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ToWizardId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Not currently used. Will be available in a future release, applicable to rule type &apos;Go To Wizard&apos;.</description>
    <inlineHelpText>Not currently used. Will be available in a future release, applicable to rule type &apos;Go To Wizard&apos;.</inlineHelpText>
    <label>Go To Wizard</label>
    <referenceTo>Apttus__Wizard__c</referenceTo>
    <relationshipName>WizardRulesets2</relationshipName>
    <type>Lookup</type>
</CustomField>