force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__ToWizardStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ToWizardStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicable to rule type &apos;Go To Step&apos;.</description>
    <inlineHelpText>Applicable to rule type &apos;Go To Step&apos;.</inlineHelpText>
    <label>Go To Wizard Step</label>
    <referenceTo>Apttus__WizardStep__c</referenceTo>
    <relationshipName>WizardRulesets2</relationshipName>
    <type>Lookup</type>
</CustomField>