force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__Transient__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Transient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ruleset added to a step is in Transient state till the Step is saved.</description>
    <inlineHelpText>Ruleset added to a step is in Transient state till the Step is saved.</inlineHelpText>
    <label>Transient</label>
    <type>Checkbox</type>
</CustomField>