force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__Wizard__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Wizard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Wizard this Ruleset is related to</description>
    <inlineHelpText>The Wizard this Ruleset is related to</inlineHelpText>
    <label>Wizard</label>
    <referenceTo>Apttus__Wizard__c</referenceTo>
    <relationshipName>Wizard_Rulesets</relationshipName>
    <type>Lookup</type>
</CustomField>