force-app/main/default/objects/Apttus__WizardRuleset__c/fields/Apttus__WizardInputControlId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardInputControlId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Wizard Input Control</description>
    <inlineHelpText>Lookup to Wizard Input Control</inlineHelpText>
    <label>Wizard Input Control</label>
    <referenceTo>Apttus__WizardInputControl__c</referenceTo>
    <relationshipName>WizardRulesets3</relationshipName>
    <type>Lookup</type>
</CustomField>