force-app/main/default/objects/Apttus__WizardRuleset__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__Active__c</columns>
    <columns>Apttus__RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>